# srt2csv

./: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py  subtitle_csv.py  vocabulary.py
pytest/: test_0.csv  test_1.srt  vocabular.txt
src/srt2csv/: __main__.py  subtitle_csv.py  vocabulary.py
srt2csv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_srt2csv.py
tests/test_data/: test_0.srt  test_1.csv  test_2_multi.csv  test_2_multi.srt
